--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,7 @@
       <version>3.5.4</version>
     </dependency>
     <dependency>
+      <!-- MyBatis-Spring将 MyBatis 代码无缝地整合到 Spring 中 -->
       <groupId>org.mybatis</groupId>
       <artifactId>mybatis-spring</artifactId>
       <version>2.0.3</version>
